Reorganize notebooks into single folder and rename ensemble_model to gradient_boosting

--- a/notebooks/NN_model.ipynb
+++ b/notebooks/NN_model.ipynb
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('train.csv')\n",
-    "df_raw = pd.read_csv('train.csv')\n",
+    "df = pd.read_csv('../data/train.csv')\n",
+    "df_raw = pd.read_csv('../data/train.csv')\n",
     "\n",
     "# drop unnecessary columns\n",
     "df = df.drop(columns=['weather_temperature', 'weather_wind_mph', 'weather_humidity', 'weather_detail', 'stadium'])\n",
