--- a/notebooks/svr_model.ipynb
+++ b/notebooks/svr_model.ipynb
@@ -32,8 +32,8 @@
    "source": [
     "\n",
     "\n",
-    "df = pd.read_csv('train.csv')\n",
-    "df_raw = pd.read_csv('train.csv')\n",
+    "df = pd.read_csv('../data/train.csv')\n",
+    "df_raw = pd.read_csv('../data/train.csv')\n",
     "\n",
     "# drop unnecessary columns\n",
     "df = df.drop(columns=['weather_temperature', 'weather_wind_mph', 'weather_humidity', 'weather_detail', 'stadium'])\n",
