--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv('train.csv')\n",
-    "df_raw = pd.read_csv('train.csv')\n",
+    "df = pd.read_csv('../data/train.csv')\n",
+    "df_raw = pd.read_csv('../data/train.csv')\n",
     "\n",
     "# drop unnecessary columns\n",
     "df = df.drop(columns=['weather_temperature', 'weather_wind_mph', 'weather_humidity', 'weather_detail', 'stadium'])\n",
